test/libhyperion/syntaxTests/literals/invalid_octal_denomination_no_whitespace.hyp
contract C {
    uint y = 01shor;
}
// ----
// ParserError 8936: (26-27): Octal numbers not allowed.
